--- a/ESP32_Node_1/platformio.ini
+++ b/ESP32_Node_1/platformio.ini
@@ -11,5 +11,6 @@
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
-framework = espidf
-board_upload.flash_size = 2MB
+framework = arduino
+monitor_speed = 115200
+lib_deps = nanopb/Nanopb@^0.4.91
